refactor: add usage guide to typography styleguide

--- a/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
+++ b/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
@@ -2,6 +2,24 @@ import { Meta, Typeset } from '@storybook/blocks';
 
 <Meta title="Docs/Styleguide/Typography" />
 
+# Typography
+
+Our typography system is designed to establish clear hierarchies, promote readability, and create a coherent visual experience across our digital platforms.
+
+### Applying Typography Styles
+
+To use our typography styles, add the corresponding class to your HTML element. Our classes are named to reflect their purpose, making them intuitive to use.
+
+**Example Usage:**
+
+```html
+<h1 class="header-d1">Display Large</h1>
+<h2 class="header-h2">Headline Large</h2>
+<h4 class="title-l">Title Large</h4>
+<p class="label-l">Label Large</p>
+<p class="body-l">Body Large</p>
+```
+
 export const typography = {
   type: {
     primary: '"Lato", "Verdana", sans-serif',
@@ -15,10 +33,6 @@ export const typography = {
 };
 
 export const SampleText = 'Lorem ipsum dolor sit amet';
-
-# Typography
-
-Our typography system is designed to establish clear hierarchies, promote readability, and create a coherent visual experience across our digital platforms.
 
 **Fonts**: *Lato, Verdana, sans-serif*
 
