migrate getting-started to apps router

--- a/packages/landingpage/mdx/getting-started/javascript-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/javascript-guide.mdx
@@ -1,7 +1,6 @@
 import {CH} from '@code-hike/mdx/components';
-import Hint from "components/getting-started/hint";
-import MenuSection from "components/getting-started/menuSection";
-import StepIndicator from 'components/getting-started/stepIndicator';
+import MenuSection from "../../components/getting-started/menuSection";
+import StepIndicator from '../../components/getting-started/stepIndicator';
 
 # Integrate with Javascript
 <MenuSection title='About the Elements'>
