--- a/packages/landingpage/mdx/getting-started/vue-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/vue-guide.mdx
@@ -1,6 +1,6 @@
 import {CH} from '@code-hike/mdx/components';
-import StepIndicator from 'components/getting-started/stepIndicator';
-import MenuSection from "components/getting-started/menuSection";
+import StepIndicator from '../../components/getting-started/stepIndicator';
+import MenuSection from "../../components/getting-started/menuSection";
 
 # Integrate with Vue.js
 
@@ -83,7 +83,7 @@ import MenuSection from "components/getting-started/menuSection";
 
 <MenuSection title="Prepare the Project for Vue.js 2">
   <StepIndicator step="2">Before you start using the components, you need to prepare the project.</StepIndicator>
-  
+
   <CH.Section>
   To do so, open `src/main.js` and ...
   - ... [define the Custom Elements (these are the inovex elements Web Components)](focus://1:4,12:14)
