clean up task, refactor i18n

--- a/packages/landingpage/app/[lang]/getting-started/javascript/javascript-guide.mdx
+++ b/packages/landingpage/app/[lang]/getting-started/javascript/javascript-guide.mdx
@@ -1,5 +1,5 @@
-import {CH} from '@code-hike/mdx/components';
-import MenuSection from "../../components/getting-started/menuSection";
+import { CH } from '@code-hike/mdx/components';
+import MenuSection from '../../components/getting-started/menuSection';
 import StepIndicator from '../../components/getting-started/stepIndicator';
 
 # Integrate with Javascript
