--- a/packages/landingpage/app/[lang]/getting-started/react/react-guide.mdx
+++ b/packages/landingpage/app/[lang]/getting-started/react/react-guide.mdx
@@ -1,11 +1,11 @@
-import {CH} from '@code-hike/mdx/components';
+import { CH } from '@code-hike/mdx/components';
 import Image from 'next/image';
-import Hint from "../../components/getting-started/hint";
+import Hint from '../../components/getting-started/hint';
 import StepIndicator from '../../components/getting-started/stepIndicator';
-import MenuSection from "../../components/getting-started/menuSection";
+import MenuSection from '../../components/getting-started/menuSection';
 
 
-  <section>
+<section>
 
   <div style={{ display: "flex", alignItems: "center", justifyContent: 'space-between' }}>
     <div>
