--- a/packages/landingpage/app/[lang]/getting-started/vue/vue-guide.mdx
+++ b/packages/landingpage/app/[lang]/getting-started/vue/vue-guide.mdx
@@ -1,6 +1,6 @@
-import {CH} from '@code-hike/mdx/components';
+import { CH } from '@code-hike/mdx/components';
 import StepIndicator from '../../components/getting-started/stepIndicator';
-import MenuSection from "../../components/getting-started/menuSection";
+import MenuSection from '../../components/getting-started/menuSection';
 
 # Integrate with Vue.js
 
