--- a/packages/landingpage/app/[lang]/getting-started/vue/vue-guide.mdx
+++ b/packages/landingpage/app/[lang]/getting-started/vue/vue-guide.mdx
@@ -1,6 +1,5 @@
 import { CH } from '@code-hike/mdx/components';
-import MenuSection from '../components/menuSection';
-import StepIndicator from '../components/stepIndicator';
+import { MenuSection, StepIndicator } from '../_components';
 
 # Integrate with Vue.js
 
@@ -11,8 +10,7 @@ import StepIndicator from '../components/stepIndicator';
 </MenuSection>
 <MenuSection title="Install @inovex.de/elements-vue">
 
-  <StepIndicator step="1">Add the package `@inovex.de/elements-vue` to your project using **npm** or
-    **yarn**:</StepIndicator>
+  <StepIndicator step="1">Add the package `@inovex.de/elements-vue` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
     ```bash npm
     npm install @inovex.de/elements-vue --save
@@ -26,43 +24,42 @@ import StepIndicator from '../components/stepIndicator';
 
 <MenuSection title="Prepare the Project">
   <CH.Section>
-    <StepIndicator step="2">[Import the elements module](focus://2) and [use it in your app](focus://6).</StepIndicator>
+  <StepIndicator step="2">[Import the elements module](focus://2) and [use it in your app](focus://6).</StepIndicator>
 
-    ```javascript main.js
-    import {createApp} from 'vue';
-    import {InoElementsVue} from '@inovex.de/elements-vue';
-    import App from './App.vue'
+  ```javascript main.js
+  import { createApp } from 'vue';
+  import { InoElementsVue } from '@inovex.de/elements-vue';
+  import App from './App.vue'
 
-    const app = createApp(App);
-    app.use(InoElementsVue);
-    app.mount('#app');
+  const app = createApp(App);
+  app.use(InoElementsVue);
+  app.mount('#app');
 
-    ```
+  ```
   </CH.Section>
 </MenuSection>
 
 <MenuSection title="Ready for use">
 
-  As the integration is now complete, you can use the components in your project in the same way you would use any other
-  Vue.js component.
+  As the integration is now complete, you can use the components in your project in the same way you would use any other Vue.js component.
   Here is an example:
   <CH.Code>
-    ```javascript app.vue
-    import {InoButton} from "@inovex.de/elements-vue";
+  ```javascript app.vue
+  import { InoButton } from "@inovex.de/elements-vue";
 
-    export default {
-    name: 'ExampleApp',
-    components: {
-    InoButton,
-  },
-    data: () => ({
-    myData: [],
-  }),
-    methods: {
-    foo() {}
+  export default {
+      name: 'ExampleApp',
+      components: {
+          InoButton,
+      },
+      data: () => ({
+          myData: [],
+      }),
+      methods: {
+          foo() {}
+      }
   }
-  }
-    ```
+  ```
   </CH.Code>
 </MenuSection>
 
@@ -72,8 +69,7 @@ import StepIndicator from '../components/stepIndicator';
 
 <MenuSection title="Install @inovex.de/elements">
 
-  <StepIndicator step="1">Add the package `@inovex.de/elements` to your project using **npm** or
-    **yarn**:</StepIndicator>
+  <StepIndicator step="1">Add the package `@inovex.de/elements` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
     ```bash npm
     npm install @inovex.de/elements --save
@@ -88,27 +84,27 @@ import StepIndicator from '../components/stepIndicator';
   <StepIndicator step="2">Before you start using the components, you need to prepare the project.</StepIndicator>
 
   <CH.Section>
-    To do so, open `src/main.js` and ...
-    - ... [define the Custom Elements (these are the inovex elements Web Components)](focus://1:4,12:14)
-    - ... [tell the Vue compiler to ignore Custom Elements starting with `ino-` during compilation](focus://10)
-    - ... [import the icons](focus://5:8)
+  To do so, open `src/main.js` and ...
+  - ... [define the Custom Elements (these are the inovex elements Web Components)](focus://1:4,12:14)
+  - ... [tell the Vue compiler to ignore Custom Elements starting with `ino-` during compilation](focus://10)
+  - ... [import the icons](focus://5:8)
 
-    ```javascript main.js
-    import {
+  ```javascript main.js
+  import {
     applyPolyfills,
     defineCustomElements,
   } from '@inovex.de/elements/dist/loader';
-    import {addIcons} from '@inovex.de/elements/dist/collection/util/icons';
-    import {ICON_PATHS} from '@inovex.de/elements/dist/inovex-elements/ino-icon/index.esm.js';
+  import { addIcons } from '@inovex.de/elements/dist/collection/util/icons';
+  import { ICON_PATHS } from '@inovex.de/elements/dist/inovex-elements/ino-icon/index.esm.js';
 
-    addIcons(ICON_PATHS);
+  addIcons(ICON_PATHS);
 
-    Vue.config.ignoredElements = [ /^ino-/ ];
+  Vue.config.ignoredElements = [ /^ino-/ ];
 
-    applyPolyfills().then(() => {
+  applyPolyfills().then(() => {
     defineCustomElements();
   });
-    ```
+  ```
   </CH.Section>
 </MenuSection>
 
