add faq pattern to landingpage

--- a/packages/landingpage/translations/locales/de/library.json
+++ b/packages/landingpage/translations/locales/de/library.json
@@ -20,6 +20,10 @@
     "footer": {
       "title": "Footer-Navigation",
       "description": "Runden Sie Ihre Webseite mit einem Footer ab, der wesentliche Informationen und Navigationshinweise in einem prägnanten Layout bietet."
+    },
+    "faq": {
+      "title": "FAQ",
+      "description": "Bieten Sie Benutzern eine leicht zugängliche FAQ-Seite, die häufig gestellte Fragen klar und übersichtlich beantwortet."
     }
   }
 }
