feat: update project notice styling and localization

--- a/packages/landingpage/translations/locales/de/common.json
+++ b/packages/landingpage/translations/locales/de/common.json
@@ -115,5 +115,9 @@
       "label": "Datenschutz",
       "url": "https://www.inovex.de/de/datenschutz/"
     }
+  },
+  "projectNotice": {
+    "title": "Projekt-Hinweis:",
+    "message": "Dieses Projekt ist derzeit pausiert und wird nicht aktiv weiterentwickelt. Wir schätzen Ihr Interesse und werden Updates bereitstellen, sobald die Entwicklung wieder aufgenommen wird."
   }
 }
