chore: migrate from yarn to pnpm to improve performance

--- a/packages/storybook/src/stories/docs/contributing/01-high-level-overview.stories.mdx
+++ b/packages/storybook/src/stories/docs/contributing/01-high-level-overview.stories.mdx
@@ -65,7 +65,7 @@ You only need to change this package if you add a new or remove an existing comp
 
 This project is just a normal React project which consumes the core package and outputs React components for other React projects to consume.
 
-Every time you run `yarn start` or `yarn build` from within the root of this repo, Lerna first builds the core package before building the React components in this package. The core package is just a dependency of this React project. This project only provides a wrapper component to map the Custom Elements attributes and events to the props in the React world.
+Every time you run `pnpm start` or `pnpm build` from within the root of this repo, Lerna first builds the core package before building the React components in this package. The core package is just a dependency of this React project. This project only provides a wrapper component to map the Custom Elements attributes and events to the props in the React world.
 
 You should never have to make changes to this package. To learn more about this topic, refer to the [README](https://github.com/inovex/elements/blob/master/packages/elements-react/README.md) of `@inovex.de/elements-react`.
 
